Simple Scala hello world that compiles